Modified home call out CSS

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Deep Dark Fantasies</h1>
+<div class="home-callout text-center container-fluid">
+    <h1>Deep Dark Fantasies</h1>
+    <h3>Boy next door</h3>
+</div>
