--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,20 +37,10 @@ h1, h2, h3{
     border: none;
 }
 
-.navbar-default .navbar-brand{
+.navbar-default .navbar-brand, .navbar-default .navbar-nav li a{
     color: black;
-}
-
-.navbar-default .navbar-brand:hover{
-    color: black;
-    opacity: 0.75;
-}
-
-.navbar-default .navbar-nav li a{
-    color: black;
-}
-
-.navbar-default .navbar-nav li a{
-    color: black;
-    opacity: 0.75;
+    &:hover{
+        color: black;
+        opacity: 0.75;
+    }
 }
