Updated nav links using link_to

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand"><i class="fa fa-building"></i>知力电梯</a>
+          <!--<a href="/" class="navbar-brand"><i class="fa fa-building"></i>知力电梯</a>-->
+          <%= link_to "/", class: "navbar-brand" do %>
+            <i class="fa fa-building"></i>
+            知力电梯
+          <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/about">关于</a></li>
+            <!--<li><a href="/about">关于</a></li>-->
+            <li><%= link_to "实力", "/about" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
