--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,9 +24,10 @@ h1, h2, h3{
 
 .navbar, .home-callout{
     //Gradient provided by uiGradients
-    background: #2980B9;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #0575E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .home-callout{
@@ -40,9 +41,9 @@ h1, h2, h3{
 }
 
 .navbar-default .navbar-brand, .navbar-default .navbar-nav li a{
-    color: black;
+    color: white;
     &:hover{
-        color: black;
+        color: white;
         opacity: 0.75;
     }
 }
