--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
           </button>
           <!--<a href="/" class="navbar-brand"><i class="fa fa-building"></i>知力电梯</a>-->
-          <%= link_to "/", class: "navbar-brand" do %>
+          <%= link_to root_path, class: "navbar-brand" do %>
             <i class="fa fa-building"></i>
             知力电梯
           <% end %>
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--<li><a href="/about">关于</a></li>-->
-            <li><%= link_to "实力", "/about" %></li>
+            <li><%= link_to "关于", about_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
