--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1>My name is Van. I'm a performance artist.</h1>
+<div class="container text-center">
+<h1>About</h1>
+<p>My name is Van. I'm a performance artist.</p>
+</div>
