--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           <ul class="nav navbar-nav navbar-right">
             <!--<li><a href="/about">关于</a></li>-->
             <li><%= link_to "关于", about_path %></li>
+            <li><%= link_to "联系加盟",  new_contact_path%></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
