--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,10 @@
           <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
+          <div class="nav navbar-nav navbar-right">
+            <a href="/users/sign_in" class="btn btn-default navbar-btn">Log In</a>
+            <a href="/users/sign_up" class="btn btn-default navbar-btn">Sign Up</a>
+          </div>
           <ul class="nav navbar-nav navbar-right">
             <!--<li><a href="/about">关于</a></li>-->
             <li><%= link_to "关于", about_path %></li>
