--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,29 @@
 <div class="home-callout text-center container-fluid">
-    <h1>Deep Dark Fantasies</h1>
-    <h3>Boy next door</h3>
+    <h1>做世界第一的电梯</h1>
+    <h3>实力不是我们的问题</h3>
+</div>
+
+<br>
+<br>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Basic Membership</h2>
+                <h4>Have a good time!</h4>
+                </br>
+                <%= link_to "Sign up with Basic", "#", class: "btn btn-primary btn-block" %>
+            </div>
+        </div>
+        
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Pro Membership</h2>
+                <h4>You are our premium member!</h4>
+                </br>
+                <%= link_to "Sign up with Pro", "#", class: "btn btn-success btn-block" %>
+            </div>
+        </div>
+    </div>
 </div>
