--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
                 <h2 class="text-center">Basic Membership</h2>
                 <h4>Have a good time!</h4>
                 </br>
-                <%= link_to "Sign up with Basic", "#", class: "btn btn-primary btn-block" %>
+                <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: "btn btn-primary btn-block" %>
             </div>
         </div>
         
@@ -22,7 +22,7 @@
                 <h2 class="text-center">Pro Membership</h2>
                 <h4>You are our premium member!</h4>
                 </br>
-                <%= link_to "Sign up with Pro", "#", class: "btn btn-success btn-block" %>
+                <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: "btn btn-success btn-block" %>
             </div>
         </div>
     </div>
